# magnesie-image-storage

./: .env  Dockerfile  README.md  docker-compose.yml
database/: 0.0.0-00_init.sql  0.1.0-01_table_creation.sql  Dockerfile  init.sql
docs/: index.htm  search-index.js  settings.html  source-files.js
docs/src/webservice/: beans.rs.html  cors.rs.html  main.rs.html  models.rs.html  routes.rs.html  schema.rs.html
docs/webservice/: all.html  fn.main.html  index.html  sidebar-items.js  struct.DbConn.html  struct.DbConnPool.html
docs/webservice/beans/: constant.LIMIT.html  index.html  sidebar-items.js  struct.SubmissionBean.html  struct.UpdateSubmissionBean.html
docs/webservice/cors/: index.html  struct.CorsFairing.html
docs/webservice/models/: fn._impl_associations_for_insertablephoto.html  fn._impl_associations_for_insertablesubmission.html  fn._impl_associations_for_photo.html  fn._impl_associations_for_submission.html  fn._impl_identifiable_for_photo.html  fn._impl_identifiable_for_site.html  fn._impl_identifiable_for_submission.html  fn._impl_identifiable_for_user.html  fn._impl_insertable_for_insertablephoto.html  fn._impl_insertable_for_insertablesite.html  fn._impl_insertable_for_insertablesubmission.html  fn._impl_insertable_for_insertableuser.html  fn._impl_queryable_for_photo.html  fn._impl_queryable_for_site.html  fn._impl_queryable_for_submission.html  fn._impl_queryable_for_user.html  index.html  sidebar-items.js  (+8 more)
webservice/: Cargo.toml  Dockerfile  wait-for.sh
webservice/src/: beans.rs  cors.rs  main.rs  models.rs  routes.rs  schema.rs
(+134 files in other folders)
