[package]
name = "webservice"
version = "0.1.0"
authors = ["lpelecq <lucas.pelecq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"]}
bigdecimal = { version = "0.1.2", features = ["serde"]}
# For connecting with the MySQL database
diesel = { version = "1.4.5", features = ["mysql", "chrono", "numeric"] }
# Rocket Webserver
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["serve", "json", "diesel_mysql_pool"] }

rocket-multipart-form-data = "0.9.6"

# Serialization/Deserialization
serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"


[profile.dev]
debug = 2